<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PreZenTainer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">시작하기</string>
    <string name="title_activity_file_transfer_requested">FileTransferRequestedActivity</string>
    <string name="title_activity_detail_setting">DetailSettingActivity</string>
    <string name="title_activity_setting_bluetooth">SettingBluetoothActivity</string>
    <string name="title_activity_load">불러오기</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_result">ResultActivity</string>

    <!-- Login -->
    <string name="hint_email">아이디</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_password_check">비밀번호 확인</string>
    <string name="hint_name">실명</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_link_to_register">회원이 아니세요? 계정을 만들어보아요</string>
    <string name="btn_link_to_login">이미 등록했어요, 로그인 할래요</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">로그아웃</string>
    <string name="name">실명</string>

    <!-- home Ui -->
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_setting">시작하기</string>
    <string name="nav_item_load">불러오기</string>
    <string name="nav_item_homePage">개발자페이지</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_setting</item>
        <item>@string/nav_item_load</item>
        <item>@string/nav_item_homePage</item>
    </string-array>
    <string name="title_activity_pairing">패어링</string>
    <string name="title_activity_mypage">Mypage</string>
    

</resources>
