<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerActivityView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        <ImageView
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/f_prezentainer" />
        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_login"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
 
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_login"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
 
        <!-- Login Button -->
        <EditText 
            android:id="@+id/password_check" 
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_login"
            android:ems="10" android:hint="@string/hint_password_check" 
            android:inputType="textPassword" 
            android:paddingLeft="30dp"
            android:singleLine="true" 
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>
 
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/button_login"
            android:text="@string/btn_register"
            android:textColor="@color/btn_login_text" />
 
        <!-- Link to Login Screen -->
 
        <TextView
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginTop="40dip"
            android:background="@drawable/button_link_to_login"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>
 
</LinearLayout>